Search buttons with pointer properties fail in Adjust Last Operation Panel (e.g. cannot change ShapeKey on Blend From Shape operator) #80854

Closed
opened 2020-09-16 20:56:18 +02:00 by Likkez · 13 comments

System Information
Operating system: Linux-5.3.0-7648-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-16 15:20, hash: 60fa80de0b
Worked: 2.90
Caused by 49f088e2d0

Short description of error
Cannot pick a shape key when calling BlendFromShape operator. The option is always stuck on 'Basis'

Exact steps for others to reproduce the error

  1. Open attached file
    shape key bug.blend
  2. Run Blend From Shape operator
  3. Try to change to some other shape key from 'Basis'
**System Information** Operating system: Linux-5.3.0-7648-generic-x86_64-with-Ubuntu-19.10-eoan 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-16 15:20, hash: `60fa80de0b` Worked: 2.90 Caused by 49f088e2d0 **Short description of error** Cannot pick a shape key when calling BlendFromShape operator. The option is always stuck on 'Basis' **Exact steps for others to reproduce the error** 1. Open attached file [shape key bug.blend](https://archive.blender.org/developer/F8889995/shape_key_bug.blend) 2. Run Blend From Shape operator 3. Try to change to some other shape key from 'Basis'
Author

Added subscriber: @Likkez-2

Added subscriber: @Likkez-2
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

I can reproduce.
Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits
2.91.0 Alpha, branch: arcpatch-D7437, commit date: 2020-09-15 08:58, hash: 003695440a

I can reproduce. Linux-5.4.0-7634-generic-x86_64-with-debian-bullseye-sid 64 Bits 2.91.0 Alpha, branch: arcpatch-[D7437](https://archive.blender.org/developer/D7437), commit date: 2020-09-15 08:58, hash: `003695440a`
Author

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'

Changed status from 'Confirmed' to: 'Needs Developer To Reproduce'
Member

Setting it back to unconfirmed so a triager can find it and assign to correct module

Setting it back to unconfirmed so a triager can find it and assign to correct module
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-09-21 10:49:12 +02:00
Member

Can confirm, will check on this.

Can confirm, will check on this.
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Looks like this is caused by 49f088e2d0

CC @JulianEisel

Looks like this is caused by 49f088e2d0 CC @JulianEisel
Philipp Oeser changed title from Cannot change ShapeKey on Blend From Shape operator to Search buttons with pointer properties fail in Adjust Last Operation Panel (e.g. cannot change ShapeKey on Blend From Shape operator) 2020-09-21 12:11:47 +02:00
Philipp Oeser removed their assignment 2020-09-21 12:11:47 +02:00

This issue was referenced by 7883ccd29f

This issue was referenced by 7883ccd29fe1dc37dff6c46ee0e9ba053444466d
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Julian Eisel self-assigned this 2020-09-21 15:08:03 +02:00
Thomas Dinges added this to the 2.91 milestone 2023-02-08 16:20:31 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80854
No description provided.