Fix T80854: Search buttons fail in Adjust Last Operation Panel

There's the old and ugly hack where the `uiBut.poin` points to the
button itself. When reallocating the button we have to update that
pointer of course.